--- a/src/components/buildingProgress/buildingProgress.module.css
+++ b/src/components/buildingProgress/buildingProgress.module.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    max-width: 100%;
 }
 
 .dropboxleft {
@@ -207,6 +208,16 @@
     .houseyear {
         font-size: 13px;
         line-height: 18px;
+    }
+}
+
+@media (max-width: 418px) {
+    .dropboxleft {
+        min-width: unset;
+    }
+    
+    .dropboxright {
+        min-width: unset;
     }
 }
 
