--- a/src/components/customSelector/customSelector.module.css
+++ b/src/components/customSelector/customSelector.module.css
@@ -2,3 +2,31 @@
     width: max-content;
     max-width: 135px;
 }
+
+.menucomponent{
+    opacity: 0;
+    animation: displaying var(--transition) forwards;
+}
+
+@keyframes displaying {
+    0%{
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes hiding {
+    0%{
+
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+}
