--- a/src/components/sliderAndNav/sliderAndNav.module.css
+++ b/src/components/sliderAndNav/sliderAndNav.module.css
@@ -48,6 +48,7 @@
     line-height: 24px;
     cursor: pointer;
     transition: var(--transition);
+    
 }
 
 .navItem:hover {
@@ -67,8 +68,8 @@
     }
 
     .desc {
-        font-size: 16px;
-        line-height: 28px;
+        font-size: 12px;
+        line-height: 15px;
         left: 5%;
     }
 }
@@ -100,8 +101,6 @@
 
     .title {
         top: 45%;
-        font-size: 22px;
-        line-height: 32px;
     }
 
     .desc {
@@ -122,6 +121,10 @@
 }
 
 @media (max-width: 500px) {
+    .title{
+        font-size: 22px;
+        line-height: 32px;
+    }
 
     .topBar {
         max-height: 200px;
