--- a/src/assets/icons/style.css
+++ b/src/assets/icons/style.css
@@ -1,10 +1,10 @@
 /* @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4n54gb');
-  src:  url('fonts/icomoon.eot?4n54gb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4n54gb') format('truetype'),
-    url('fonts/icomoon.woff?4n54gb') format('woff'),
-    url('fonts/icomoon.svg?4n54gb#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?7173u5');
+  src:  url('fonts/icomoon.eot?7173u5#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?7173u5') format('truetype'),
+    url('fonts/icomoon.woff?7173u5') format('woff'),
+    url('fonts/icomoon.svg?7173u5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -63,6 +63,9 @@
 }
 .icon-transport:before {
   content: "\e92c";
+}
+.icon-projectArrow:before {
+  content: "\e92d";
 }
 .icon-shop:before {
   content: "\e92e";
