--- a/src/components/filterAndTabs/dataView/checkmate/checkmate.module.css
+++ b/src/components/filterAndTabs/dataView/checkmate/checkmate.module.css
@@ -95,6 +95,10 @@
     display: flex;
     flex-direction: column;
     transition: var(--transition);
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .topinfo {
