--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -44,6 +44,10 @@
     max-height: 100vh;
     width: 100%;
     overflow-y: auto;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .navMenu[data-isOpen="true"] {
@@ -147,6 +151,11 @@
     font-family: Montserrat-Medium;
     font-size: 14px;
     justify-content: space-between;
+    
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .rightPart {
