--- a/src/components/layoutCompare/layoutCompare.module.css
+++ b/src/components/layoutCompare/layoutCompare.module.css
@@ -96,6 +96,11 @@
 .infowrapper {
     display: flex;
     flex-direction: column;
+    
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .price {
