--- a/src/components/filterAndTabs/houseCard/houseCard.css
+++ b/src/components/filterAndTabs/houseCard/houseCard.css
@@ -38,6 +38,7 @@
 }
 
 .houseCard__container {
+    min-width: 364px;
     height: 100%;
     width: 100%;
     display: flex;
@@ -52,8 +53,8 @@
     position: relative;
     border-radius: 5px;
     max-height: 317px;
-    padding-top: 70%;
-    height: 100%;
+    /* padding-top: 70%; */
+    /* height: 100%; */
     width: 100%;
     overflow: hidden;
     transition: var(--transition);
@@ -61,9 +62,6 @@
 }
 
 .houseCard__image {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -74,7 +72,6 @@
 .houseCard__imageWrapper-map {
     border-radius: 0;
     bottom: 1px;
-    min-height: 230px;
     z-index: 2;
     overflow: hidden;
     position: relative;
@@ -83,6 +80,7 @@
 
 .houseCard__image-map {
     object-fit: cover;
+    min-height: 230px;
     width: 100%;
 }
 
@@ -268,21 +266,27 @@
 }
 
 @media (min-width: 1241px) and (max-width: 1600px) {
+    .houseCard__container{
+        min-width: 290px;
+    }
     .houseCard{
         height: 500px;
     }
 
     .houseCard__imageWrapper {
-        max-height: 290px;
+        max-height: 180px;
     }
 
-    .houseCard:hover .houseCard__imageWrapper {
+    /* .houseCard:hover .houseCard__imageWrapper {
         max-height: 180px;
         padding-top: 30%;
-    }
+    } */
 }
 
 @media (max-width: 1230px) {
+    .houseCard__container{
+        min-width: 290px;
+    }
     .houseCard__title {
         font-size: 18px;
         line-height: 22px;
@@ -302,7 +306,10 @@
         max-width: 290px;
     }
 
-    .houseCard__imageWrapper-map {}
+    .houseCard__image-map {
+        min-height: 180px;
+        width: 100%;
+    }
 
     .houseCard__infoWrapper-map {
         padding: 0 15px;
