--- a/src/components/infrastructure/infrastructure.css
+++ b/src/components/infrastructure/infrastructure.css
@@ -5,6 +5,10 @@
     gap: 62px;
 }
 
+.infrastructure .ymaps-2-1-79-balloon{
+    animation: displaying var(--transition) linear;
+}
+
 .infrastructure__mapBallon{
     min-height: 123px;
     min-width: 316px;
@@ -14,7 +18,19 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    transition: var(--transition);
+    animation: displaying var(--transition) linear;
 }
+
+@keyframes displaying {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
 .infrastructure__mapBallonTitle{
     font-size: 16px;
     line-height: 24px;
