--- a/src/components/infrastructure/infrastructure.module.css
+++ b/src/components/infrastructure/infrastructure.module.css
@@ -7,8 +7,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 33px 39px 34px 39px;
-    gap: 16px;
+    padding: 33px 15px 34px 15px;
+    gap: 4px;
     min-height: 500px;
     min-width: 400px;
     border-radius: 5px;
@@ -31,11 +31,25 @@
 }
 
 .element {
+    padding: 6px 24px;
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
+    /* border: 1px solid black; */
+    border-radius: 22px;
+    transition: var(--transition);
+}
+
+.element:hover{
+    box-shadow: 5px 5px 10px hsla(0, 0%, 0%, 0.1);
+    transform: translateY(-2px);
+}
+
+.element[data-isactive="false"]{
+    opacity: 0.5;
 }
 
 .left {
