--- a/src/components/oneNewsFull/oneNewsFull.module.css
+++ b/src/components/oneNewsFull/oneNewsFull.module.css
@@ -169,7 +169,7 @@
     max-width: 1438px;
     max-height: 600px;
     border-radius: 5px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .swiperwrapper {
